@@ -25,6 +25,8 @@ CHANGES
   install. The script will still fall back to a simple ``urlopen`` on
   platforms that do not have these tools.
 * Issue #65: Deprecated the ``Features`` functionality.
+* Issue #52: In ``VerifyingHTTPSConn``, handle a tunnelled (proxied)
+  connection.
 
 -----
 0.9.8
